History:

<see Git checking messages for history>

5.1.1   2020/xx/xx
      - removed usage of deprecated "license_file" option for "license_files"
      - :heart: contributors: @

5.1.0   2020/04/30
      - produce wheels for Python 3 only
      - MSS: renamed again MSSMixin to MSSBase, now derived from abc.ABCMeta
      - tools: force write of file when saving a PNG file
      - tests: fix tests on macOS with Retina display
      - Windows: fixed multi-thread safety (fixes #150)
      - :heart: contributors: @narumishi

5.0.0   2019/12/31
      - removed support for Python 2.7
      - MSS: improve type annotations and add CI check
      - MSS: use __slots__ for better performances
      - MSS: better handle resources to prevent leaks
      - MSS: improve monitors finding
      - Windows: use our own instances of GDI32 and User32 DLLs
      - doc: add project_urls to setup.cfg
      - doc: add an example using the multiprocessing module (closes #82)
      - tests: added regression tests for #128 and #135
      - tests: move tests files into the package
      - :heart: contributors: @hugovk, @foone, @SergeyKalutsky

4.0.2   2019/02/23
      - new contributor: foone
      - Windows: ignore missing SetProcessDPIAware() on Window XP (fixes #109)

4.0.1   2019/01/26
      - Linux: fix several XLib functions signature (fixes #92)
      - Linux: improve monitors finding by a factor of 44

4.0.0   2019/01/11
      - MSS: remove use of setup.py for setup.cfg
      - MSS: renamed MSSBase to MSSMixin in base.py
      - MSS: refactor ctypes argtype, restype and errcheck setup (fixes #84)
      - Linux: ensure resources are freed in grab()
      - Windows: avoid unnecessary class attributes
      - MSS: ensure calls without context manager will not leak resources or document them (fixes #72 and #85)
      - MSS: fix Flake8 C408: Unnecessary dict call - rewrite as a literal, in exceptions.py
      - MSS: fix Flake8 I100: Import statements are in the wrong order