@@ -5,11 +5,14 @@ repos:
     rev: stable
     hooks:
     - id: black
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: master
+    hooks:
+    - id: flake8
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: master
     hooks:
     - id: trailing-whitespace
-    - id: flake8
     - id: end-of-file-fixer
     - id: check-docstring-first
     - id: debug-statements
